fixed visibility changes on monster pics.

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ p, label, button {
 .monster-pic {
    margin: -1rem 2rem 0 -2rem;
    align-self: right; 
+   display: none;
 }
 
 
